--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,8 +3,7 @@
     "target": "ES2022",
     "module": "NodeNext",
     "moduleResolution": "NodeNext",
-    "outDir": "./build",
-    "rootDir": "./src",
+    "outDir": "./build"
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
